fix: harden directory-based secret store per review
Address review findings on FileBasedSecretStore:

- Fail loudly on non-UTF-8 secret values: read via Files.readString, which
  throws MalformedInputException (wrapped as SecretStoreUnavailableException)
  instead of new String(bytes, UTF_8) silently substituting U+FFFD. Binary/
  corrupted secrets now surface an error rather than resolving as garbage.
- list() no longer escapes its contract on a stray file whose name is a legal
  OS file name but not a valid secret name (e.g. a backslash on POSIX): such
  entries are skipped with a warning instead of throwing IllegalArgumentException.
  Validity is now a shared FileBasedSecretReference.isValid check.
- resolve() treats hidden names (leading '.') as not-found, symmetric with
  list() which already skips them.
- Guard the resolve read against a rotation race: a NoSuchFileException between
  the isRegularFile check and the read yields NOT_FOUND for that one reference
  rather than failing the whole batch.
- Correct the reference javadoc: name validation prevents name-based traversal
  only; symlinks inside the directory are still followed by design.